--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# IDEs
+.idea
+.vscode
+
 # dependencies
 /node_modules
 /.pnp
@@ -31,7 +35,8 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+.env
+.envrc
 
 # vercel
 .vercel
